--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ header ul li a:hover {
 }
 .banner {
 	height: 90vh;
-	background-image: url(img/background.jpg);
+	background-image: url(../img/background.jpg);
 	background-size: cover;
 	position: relative;
 	display: flex;
